--- a/bots/Giveaway Bot/package.json
+++ b/bots/Giveaway Bot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Yeet-Giveaways",
+  "name": "Giveaway bot from Handbook of Darkgoatie",
   "version": "1.0.2",
   "description": "Classic old fashion giveaway bot made by darkgoatie.",
   "main": "index.js",
